fixtures/cell_env/invalid/08_unknown_override_key.sea
Cell "UnknownKey"
    @profile "python-agent-v1"
